[project]
name = "YosaCat"
version = "0.1.0"
description = "FastAPI-based OneBot-compatible QQ Bot"
authors = [{ name = "æ‹" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "requests==2.31.0",
  "python-multipart==0.0.6",
  "python-dotenv==1.2.1"
]

[tool.uv]
index-url = "https://pypi.org/simple"
